--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_sticky_header: ^0.6.4
   flutter_svg: ^1.1.5
   flutter_zoom_drawer: ^3.0.3
   get: ^4.6.5
@@ -23,15 +24,9 @@ dependencies:
   intl: ^0.17.0
   rive: ^0.9.1
   shared_preferences: ^2.0.15
-  
+  sliver_tools: ^0.2.8
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
